Pull changes from collective monography.

--- a/TODO
+++ b/TODO
@@ -52,13 +52,13 @@ Compare methods: mp5 with u2, x2, genetic ...
 
 
 ### Print:
- chaos/gen/A_low_voltage_low_power_chaoti.pdf
- wojeeoda_j_hysteretic_effects_of_dry_friction_8_PTRSA2008-366\(8\).pdf
+ [p1](chaos/gen/A_low_voltage_low_power_chaoti.pdf)
+ [p2]('wojeeoda_j_hysteretic_effects_of_dry_friction_8_PTRSA2008-3668.pdf')
 
 ### read
-  Кузнецов_Динамический_хаос_.pdf
-  complex_vibr_in_simple_sys_anyshenko.pdf
-  Analysis.And.Simulation.Of.Chaotic.Systems.Hoppensteadt.2000.0387989439.pdf
+  [r1](Кузнецов_Динамический_хаос_.pdf)
+  [r2](complex_vibr_in_simple_sys_anyshenko.pdf)
+  [r3](Analysis.And.Simulation.Of.Chaotic.Systems.Hoppensteadt.2000.0387989439.pdf)
 
 
 % vim:ft=markdown
