--- a/colp_testsys.tex
+++ b/colp_testsys.tex
@@ -44,7 +44,7 @@ $V_b = V_{CC} \frac{R_1}{R_1+R_2}$,
 
 Рассмотрев процессы заряда конденсаторов и изменение тока через
 катушку идуктивности, получим следующую систему уравнений:
-
+%
 \begin{equation}
 \label{atu:eq:colp_phys}
 \begin{dcases}
@@ -53,9 +53,9 @@ $V_b = V_{CC} \frac{R_1}{R_1+R_2}$,
   C_2 \od{V_{2}}{t}  = I_L - \frac{V_{2}}{R_e}.
 \end{dcases}
 \end{equation}
-
-
-\noindent
+%
+%
+%\noindent
 где
 $V_{CC} $ -- напряжение питания,
 $V_1,$ $V_2$ -- разность потенциалов между выводами конденсаторов
@@ -89,7 +89,7 @@ $ \rho = \sqrt{L/C} $ имеет размерность сопротивлени
 
 
 Исходя из всего вышеперечисленного, обозначим:
-
+%
 \[
   x = \frac{V_{1}}{V_{je}} ; \quad
   y = \frac{\rho I_L}{V_{je}} ; \quad
@@ -98,14 +98,14 @@ $ \rho = \sqrt{L/C} $ имеет размерность сопротивлени
   c = \frac{V_{CC}}{V_{je}}, \quad
   e = \frac{V_{b}}{V_{je}}.
 \]
+%
 \[
   b = \frac{R_c}{\rho}; \quad
   d = \frac{\rho}{R_e}. % sic!
 \]
 
 Система уравнений принимает вид:
-
-
+%
 \begin{equation}
 \label{atu:eq:colp_phys2}
 \begin{dcases}
@@ -125,7 +125,7 @@ $ T_s = \sqrt{L C} $.
 Тогда безразмерное время $t_s$
 и соответствующие производные
 будут определяться как:
-
+%
 \[
   t_s = \frac{t}{T_s}; \quad
   \mathrm{d}\, t = T_s \mathrm{d}\, t_s; \quad
@@ -133,15 +133,15 @@ $ T_s = \sqrt{L C} $.
   \od{x}{t_s} \equiv \dot{x} = T_s \od{x}{t} .
 \]
 
-Поведение величины $I_{ce}$ достаточно хорошо описывает модель
+Поведение величины $I_{ce}$ (в дальнейшем просто $I_c$) достаточно хорошо описывает модель
 Эберса-Молла~\cite{horowitz}:
-
+%
 \begin{equation}
   I_c = I_s \left( \exp\frac{V_{be}}U_t{} - 1 \right),
   \label{atu:eq:ebers-moll}
 \end{equation}
-
-\noindent
+%
+%\noindent
 где
 $I_s$ -- ток насыщения (паспортная или определяемая экспериментально величина),
 $U_t=kT/q$,
@@ -157,7 +157,7 @@ $k = \SI{1.38e-23}{\joule/\kelvin}$ -- постоянная Больцмана.
 простейшую модель транзистора, считая, что переход
 база-эмиттер открывается при $V_{BE} = V_{je}$, $ I_c \gg I_b$,
 а ток коллектора
-
+%
 \begin{equation}
 I_c =
   \begin{cases}
@@ -170,7 +170,7 @@ I_c =
 
 
 С учётом всего вышеизложенного получаем следующую систему уравнений:
-
+%
 \begin{equation}
 \label{atu:eq:colp}
 \begin{cases}
@@ -189,19 +189,19 @@ I_c =
 
 При физическом моделировании, проведённом в рамках данной работы использовались следующие
 элементы с соответствующими параметрами:
-
+%
 \[
   V_{cc} = \SI{12.06}{\volt},          \;
   R_1 = R_2 = \SI{2.2}{\kilo\ohm},     \;
   R_e = \SI{430}{\ohm},
 \]
-
+%
 \[
   C_1 = C_2 = \SI{1.03}{\micro\farad}, \;
   L = \SI{6.22}{\milli\henry},         \;
   T = \SI{305}{\kelvin},
 \]
-
+%
 \[
   \text{Q: 2N2222A}, \quad
   h_{fe}=285, \;
@@ -217,7 +217,7 @@ I_c =
  d = 0.19,   \quad
  e = 9.07.
 \]
-
+%
 \[
 F(z) =
 \begin{cases}{l}
@@ -333,12 +333,12 @@ $q_{*}(\mu) $, полученные путём моделирования
 двумя неподвижными моделями. Аналогично предыдущим системам,
 для исследования динамических свойств системы идентификации
 изменения параметра $b_o$ как:
-
+%
 \begin{equation}
  b_o(t) = p_0 + U_p \sign \sin( \omega_p t ),
   \label{atu:eq:colp_b_sign}
 \end{equation}
-
+%
 \begin{equation}
  b_o(t) = p_0 + U_p \sin( \omega_p t ).
   \label{atu:eq:colp_b_sin}
