--- a/com_monog_atu.tex
+++ b/com_monog_atu.tex
@@ -68,7 +68,7 @@
 объектом. При этом, довольно часто (но не всегда) в качестве основы для такого критерия выступает
 некая энергетическая зависимость. С учётом усреднения на требуемом интервале,
 один из простых видов критерия может быть задан как
-
+%
 \begin{equation}
 \od{q_{x^2}}{t}
 =
@@ -76,8 +76,8 @@
 ,
 \label{atu:eq:q}
 \end{equation}
-
-\noindent
+%
+%\noindent
 где $\tau$ -- характерное время оценивания, $x(t)$ -- выбранная переменная состояния системы.
 Это далеко не единственный вид определения критерия, но в данной работе предлагается именно он,
 и последующие критерием будут использовать (\ref{atu:eq:q}).
@@ -156,34 +156,34 @@ $p_{mi}(t)$ -- для $i$-той модели.
 $F(q_o,q_m)$.
 
 С учётом обозначения
-
+%
 \[
   q_r = \frac{q_o - q_m}{q_\gamma},
 \]
-
+%
 \noindent
 представлены наиболее распространённые виды таких функций:
-
+%
 \begin{equation}
   F_{\mathrm{gauss}} = \exp( - q_r^2 ),
 \label{atu:eq:F_gauss}
 \end{equation}
-
+%
 \begin{equation}
   F_{\mathrm{parabolic}} = 1 - q_r^2 \left( 1 - \frac{1}{e} \right),
 \label{atu:eq:F_parabolic}
 \end{equation}
-
+%
 \begin{equation}
   F_{\mathrm{triangle}} = 1 - |q_r| \left( 1 - \frac{1}{e} \right),
 \label{atu:eq:F_triangle}
 \end{equation}
-
+%
 \begin{equation}
   F_{\mathrm{hyper}} = \frac{1}{ 1 + |q_r| \left( 1 - \frac{1}{e} \right)},
 \label{atu:eq:F_hyper}
 \end{equation}
-
+%
 \begin{equation}
   F_{\mathrm{log}} = 1 - \ln \left( 1 + |q_r| \right) \frac{1-1/e}{\ln(2)}.
 \label{atu:eq:F_log}
@@ -215,7 +215,7 @@ $F(q_o,q_m)$.
 Первый -- реализация
 метода COG (Center of gravity, Такаги-Сугено) \cite{atu_asau25,atu_csit2015},
 используемого при дефаззификации систем нечёткой логики:
-
+%
 \begin{equation}
   p_{ge}
   =
@@ -229,7 +229,7 @@ $F(q_o,q_m)$.
 от влияния локальных экстремумов и границ. В этом
 случае определяется модель $M_{i_{m}}$ с максимальным значением
 $F$, а в оценке используется только ближайшая окрестность этой модели:
-
+%
 \begin{equation}
   p_{le}
   =
@@ -243,19 +243,19 @@ $F$, а в оценке используется только ближайшая
 функция $F(p)$ аппроксимируется параболой, и абсцисса её вершины задаёт искомое
 значение параметра. Сместим начало координат в точку
 $ ( p_c, F_c ) $. Тогда
-
+%
 \[
   \tilde{p}_c = 0, \,
   \tilde{p}_l = p_l - p_c, \,
   \tilde{p}_r = p_r - p_c.
 \]
-
+%
 \[
   \tilde{F}_c = 0, \,
   \tilde{F}_l = F_l - F_c, \,
   \tilde{F}_r = F_r - F_c.
 \]
-
+%
 \[
   \left\{
     \begin{array}{l}
@@ -265,12 +265,12 @@ $ ( p_c, F_c ) $. Тогда
     \end{array}
   \right. .
 \]
-
+%
 \[
   a_1 = \frac{\tilde{F}_r \tilde{p}_l^2 - \tilde{F}_l \tilde{p}_r^2 }
              { \tilde{p}_l^2 \tilde{p}_r  + \tilde{p}_l \tilde{p}_r^2 }.
 \]
-
+%
 \[
   a_2 = \frac{\tilde{F}_r \tilde{p}_l - \tilde{F}_l \tilde{p}_r }
              { \tilde{p}_l^2 \tilde{p}_r  + \tilde{p}_l \tilde{p}_r^2 }.
@@ -291,7 +291,7 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 текущим значением идентифицируемого параметра, полученным с помощью
 третьего подхода. Ошибки идентификации в пространстве параметров
 для рассмотренных трёх подходов обозначим соответственно:
-
+%
 \begin{equation}
   e_{ge} = p_{ge} - p_o, \;
   e_{le} = p_{le} - p_o, \;
@@ -301,12 +301,12 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 
 Динамика изменения параметров моделей (поисковых агентов) задаётся следующим образом:
-
+%
 \begin{equation}
   \od{p_c}{t} = v_f f_t(t),
   \label{atu:eq:dp_dt}
 \end{equation}
-
+%
 \noindent
 где $f_t$ -- сумма всех действующих ``сил'', $v_f$ -- коэффициент
 пропорциональности. Рассмотрим 3 действующие силы
@@ -341,12 +341,12 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 Для определения как точности, так и скорости работы системы
 идентификации, при моделировании процесса идентификации
 значения идентифицируемого параметра задавались следующими образами:
-
+%
 \begin{equation}
   p_o(t) = p_0 +  U_{p} \sin( \omega_{p} t ),
   \label{atu:eq:p_sin}
 \end{equation}
-
+%
 \begin{equation}
   p_o(t) = p_0 + U_{p} \sign \sin( \omega_{p} t ).
   \label{atu:eq:p_sign}
