--- a/fric_testsys.tex
+++ b/fric_testsys.tex
@@ -14,17 +14,17 @@
 моделирующая поведение тела заданной массы по действием внешней вынуждающей силы
 и силы сухого трения
 \cite{berger_friction,atu_asau11}:
-
+%
 \begin{equation}
- m \ddot{x} + f( x, \dot{x}, \ldots)  = u(t).
+  m \ddot{x} + f_{df}( x, \dot{x}, \ldots)  = u(t).
 \label{atu:eq:dryfric_sys}
 \end{equation}
-
-\noindent
+%
+%\noindent
 где
 $m$ -- масса тела,
 $u(t)$ -- вынуждающая сила,
-$ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
+$ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 
 Важной особенностью при моделировании силы сухого трения является тот факт,
 что это силу невозможно корректно выразить аналитически. Более того,
