--- a/tst/1/t1.tex
+++ b/tst/1/t1.tex
@@ -38,7 +38,7 @@
 \title{Tikz figures test}
 \author{А.И.~Гуда}
 
-% \tikzexternalize % requires pdflatex -shell-escape
+\tikzexternalize % requires pdflatex -shell-escape
 
 \begin{document}
 
@@ -52,7 +52,7 @@
 \begin{center}
 \input{f0.pgf}
 \end{center}
-\caption{Нулевая картинка}
+\caption{Мультиагентная система идентификации}
 \label{atu:f:f0}
 \end{figure}
 
