--- a/vdp_testsys.tex
+++ b/vdp_testsys.tex
@@ -7,7 +7,7 @@
 }
 
 \begin{equation}
- \ddot{x} + \varepsilon (1-x^2)  \dot{x} + \Omega_0^2 x  = u(t) .
+ \ddot{x} - \varepsilon (1-x^2)  \dot{x} + \Omega_0^2 x  = u(t) .
 \label{atu:eq:vdp}
 \end{equation}
 
