--- a/chua_testsys.tex
+++ b/chua_testsys.tex
@@ -34,8 +34,8 @@
 обладающей различным отрицательными наклонами
 ($m_0$ и $m_1$) на разных участках,
 и тем самым являющийся управляемым источником энергии.
-
-
+%
+%
 \begin{equation}
 g(V) =
 \begin{cases}
@@ -92,10 +92,10 @@ $C_1 = 1/9$, $C_2 = 1$, $L= 1/7$, $R = 1/0.7$, $m_0=-0.5$, $ m_2 \in [ -0.15; -0
   a_g = - \frac{m_0}{C_1}; \;
   \mu = - \frac{m_2}{C_1}.
 \]
-
-\noindent
+%
+%\noindent
 Тогда:
-
+%
 \begin{equation}
 \begin{cases}
   \dot{V}_1  = -a_{11} V_1 + a_{11}  V_2  + g_1(V_1) , \\
@@ -104,8 +104,8 @@ $C_1 = 1/9$, $C_2 = 1$, $L= 1/7$, $R = 1/0.7$, $m_0=-0.5$, $ m_2 \in [ -0.15; -0
 \end{cases}
 \label{atu:eq:chua2}
 \end{equation}
-
-
+%
+%
 \begin{equation}
 g_1(V) =
 \begin{cases}
@@ -192,12 +192,12 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 В качестве системы идентификации использовалась система с 5 поисковыми агентами и
 двумя неподвижными моделями. Для исследования динамических свойств системы идентификации
 параметр $\mu_o$ для объекта задавался двумя способами:
-
+%
 \begin{equation}
  \mu_o(t) = p_0 + U_p \sign \sin( \omega_p t )
   \label{atu:eq:chua_mu_sign}
 \end{equation}
-
+%
 \begin{equation}
  \mu_o(t) = p_0 + U_p \sin( \omega_p t ).
   \label{atu:eq:chua_mu_sin}
