--- a/com_monog_atu.tex
+++ b/com_monog_atu.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,paratype,12pt,fouriernc]{cmonogra}
+\documentclass[a4paper,paratype,13pt,fouriernc]{cmonogra}
 % atutext dejavu droid paratype fouriernc
 
 \usepackage[verbose,dvips,a4paper,tmargin=20mm,bmargin=25mm,lmargin=20mm,rmargin=20mm,headsep=4pt,includeheadfoot]{geometry}
@@ -14,7 +14,7 @@
 \input{defs.tex}
 
 \title{\bookname}
-\author{Коллективный автор}
+\author{Гуда~А.И.}
 
 \addbibresource{atuworks.bib}
 \addbibresource{artrefs.bib}
