--- a/duff_testsys.tex
+++ b/duff_testsys.tex
@@ -7,23 +7,24 @@
 }
 
 \begin{equation}
- \ddot{x} - c_0 \dot{x} + \Omega_0^2 x + \beta x^3 = u(t) ,
+ \ddot{x} + c_0 \dot{x} + \alpha x + \beta x^3 = u(t) ,
 \label{atu:eq:duff}
 \end{equation}
-
+%
 \begin{equation}
- m \ddot{x} - \nu \dot{x} + k_1 x + k_3 x^3 = F(t) ,
+ m \ddot{x} + \nu \dot{x} + k_1 x + k_3 x^3 = F(t) ,
 \label{atu:eq:duff_phys}
 \end{equation}
 
-Здесь \(m\) -- масса объекта,
-\(x(t)\) -- координата (выходной сигнал),
-\(u(t) = U_{in} \sin( \omega_{in} t ) \) -- внешняя возмущающая сила,
-\( k_1 \) -- коэффициент линейной компоненты возвращающей силы,
-\( k_3 \) -- коэффициент при нелинейной части,
-\( \Omega_0 \) -- собственная частота при отсутствии нелинейности,
-\( \nu \) и \( c_0\) -- размерный и безразмерный коэффициенты демпфирования,
-\( \beta \) -- безразмерный коэффициент нелинейной части.
+Здесь $m$ -- масса объекта,
+$x(t)$ -- координата (выходной сигнал),
+$u(t) = U_{in} \sin( \omega_{in} t ) $ -- внешняя возмущающая сила,
+$ k_1 $ -- коэффициент линейной компоненты возвращающей силы,
+$ k_3 $ -- коэффициент при нелинейной части,
+$ \alpha $ -- безразмерный коэффициент линейной компоненты возвращающей силы,
+ при $ \alpha >0 $ и отсутствии нелинейности пределяет собственную частоту: ($\Omega_0^2 = \alpha $),
+$ \nu $ и $ c_0$ -- размерный и безразмерный коэффициенты демпфирования,
+$ \beta $ -- безразмерный коэффициент нелинейной части.
 
 Идентифицируемый параметр:
 $ \beta \approx 2 $.
