--- a/defs.tex
+++ b/defs.tex
@@ -1,34 +1,17 @@
 % definitions for asau class
 
-\newcommand{\bookname}{``Коллективная монография''}
+\newcommand{\bookname}{``Диссертация''}
 \newcommand{\issn}{~}
-\newcommand{\booknamefullu}{Коллективная монография}
-\newcommand{\booknamefullr}{Коллективная монография}
-\newcommand{\booknamefulle}{Коллективная монография}
-\newcommand{\booksubtitleu}{~}
-\newcommand{\booksubtitlee}{~}
-
-\newcommand{\KPIFULL}{Національний технічний університет України
-``Київський політехнічний інститут''}
-\newcommand{\KPIFULLX}{Національний технічний університет України \par
-``Київський політехнічний інститут''}
 
 \newcommand{\bookyear}{2016}
 \newcommand{\bookmajor}{~}
 \newcommand{\bookminor}{~}
 \newcommand{\bookinyear}{~}
 
-%\newcommand{\bookinfo}{\bookyear~\No~\bookmajor{\small{(\bookminor)}}}
-%\newcommand{\booknumber}{\hbox{-- \bookmajor{\scriptsize{(\bookminor)}} }}
-%\renewcommand\headtext{\bookname\  \booknumber\  \bookyear}
-\renewcommand\headtext{\tiny\booksubtitleu\ <<\booknamefullu>>, \bookyear, \No~\bookinyear(\bookmajor)}
-\newcommand{\refheadu}{// \booksubtitleu\;<<\booknamefullu{}>>. -- \bookyear. -- \No~\bookinyear(\bookmajor). -- С.}
-\newcommand{\refheade}{// \booksubtitlee\;<<\booknamefulle{}>>. -- \bookyear. -- \No~\bookinyear(\bookmajor). -- P.}
+\renewcommand\headtext{~}
 
 \newcommand{\LitRu}{\subsection*{Библиографический список}}
 \newcommand{\LitUa}{\subsection*{Біблиографічний список}}
 \newcommand{\LitEn}{\subsection*{Bibliography list}}
 
-\newcommand{\RefSizeU}{\normalsize}
-\newcommand{\RefSizeE}{\normalsize}
 
