--- a/colp_testsys.tex
+++ b/colp_testsys.tex
@@ -43,7 +43,7 @@ $V_b = V_{CC} \frac{R_1}{R_1+R_2}$,
 исключить.
 
 Рассмотрев процессы заряда конденсаторов и изменение тока через
-катушку идуктивности, получим следующую систему уравнений:
+катушку индуктивности, получим следующую систему уравнений:
 %
 \begin{equation}
 \label{atu:eq:colp_phys}
