Cosmetics: bar->overline,...

--- a/chua_testsys.tex
+++ b/chua_testsys.tex
@@ -230,7 +230,7 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
   \includegraphics[width=0.49\textwidth]{p/cha/chua/chua_m5p-p_qg_e_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/chua/chua_m5p-p_qg_e_sin.png}
 }
-  \caption{Зависимости  $\bar{e}(q_\gamma)$ для системы (\ref{atu:eq:chua2})
+  \caption{Зависимости  $\overline{e}(q_\gamma)$ для системы (\ref{atu:eq:chua2})
   при условиях (\ref{atu:eq:chua_mu_sign}) и (\ref{atu:eq:chua_mu_sin})
 }
 \label{atu:f:chua_e_qgamma}
@@ -248,7 +248,7 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
   \includegraphics[width=0.49\textwidth]{p/cha/chua/chua_m5p-p_a_q_e_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/chua/chua_m5p-p_a_q_e_sin.png}
 }
-  \caption{Зависимости  $\bar{e}(a_q)$ для системы (\ref{atu:eq:chua2})
+  \caption{Зависимости  $\overline{e}(a_q)$ для системы (\ref{atu:eq:chua2})
   при условиях (\ref{atu:eq:chua_mu_sign}) и (\ref{atu:eq:chua_mu_sin})
 }
 \label{atu:f:chua_e_a_q}
