--- a/colp_testsys.tex
+++ b/colp_testsys.tex
@@ -49,7 +49,7 @@ $V_b = V_{CC} \frac{R_1}{R_1+R_2}$,
 \label{atu:eq:colp_phys}
 \begin{dcases}
   C_1 \od{V_{1}}{t}  = I_L - I_{CE} , \\
-  L   \od{I_L}{t}    = V_{CC} - V_{1} - V_{2} - I_L R_C , \\
+  L\, \od{I_L}{t} \; = V_{CC} - V_{1} - V_{2} - I_L R_C , \\
   C_2 \od{V_{2}}{t}  = I_L - \frac{V_{2}}{R_e}.
 \end{dcases}
 \end{equation}
@@ -365,7 +365,7 @@ $q_{*}(\mu) $, полученные путём моделирования
   \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-p_qg_e_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-p_qg_e_sin.png}
 }
-  \caption{Зависимости  $\bar{e}(q_\gamma)$ для системы (\ref{atu:eq:colp})
+  \caption{Зависимости  $\overline{e}(q_\gamma)$ для системы (\ref{atu:eq:colp})
   при условиях (\ref{atu:eq:colp_b_sign}) и (\ref{atu:eq:colp_b_sin})
 }
 \label{atu:f:colp_e_qgamma}
@@ -373,7 +373,7 @@ $q_{*}(\mu) $, полученные путём моделирования
 
 
 
-Аналогично, зависимости $\bar{e_*}(a_q)$ (рис.~\ref{atu:f:colp_e_a_q})
+Аналогично, зависимости $\overline{e_*}(a_q)$ (рис.~\ref{atu:f:colp_e_a_q})
 позволяют корректно определить время усреденения.
 При этом следует отметить, что
 полученные результаты хорошо согласуются со спектрами системы.
@@ -383,7 +383,7 @@ $q_{*}(\mu) $, полученные путём моделирования
   \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-p_a_q_e_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-p_a_q_e_sin.png}
 }
-  \caption{Зависимости  $\bar{e}(a_q)$ для системы (\ref{atu:eq:colp})
+  \caption{Зависимости  $\overline{e}(a_q)$ для системы (\ref{atu:eq:colp})
   при условиях (\ref{atu:eq:colp_b_sign}) и (\ref{atu:eq:colp_b_sin})
 }
 \label{atu:f:colp_e_a_q}
