--- a/spr_a_testsys.tex
+++ b/spr_a_testsys.tex
@@ -116,14 +116,14 @@
   \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a_m5p-p_qg_e_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a_m5p-p_qg_e_sin.png}
 }
-  \caption{Зависимости  $\bar{e}(q_\gamma)$ для системы (\ref{atu:eq:spr_a})
+  \caption{Зависимости  $\overline{e}(q_\gamma)$ для системы (\ref{atu:eq:spr_a})
   при различных видах нестационарности этого параметра
 }
 \label{atu:f:spr_a_e_qgamma}
 \end{figure}
 
 
-Зависимости $\bar{e_*}(a_q)$ (рис.~\ref{atu:f:spr_a_e_a_q})
+Зависимости $\overline{e_*}(a_q)$ (рис.~\ref{atu:f:spr_a_e_a_q})
 с одной стороны, позволяют корректно определить время усреденения,
 с другой -- подтверждают тезис о том, что более ярко выраженное изменение
 параметра требует большего времени наблюдения за системой
@@ -134,7 +134,7 @@
   \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a_m5p-p_a_q_e_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a_m5p-p_a_q_e_sin.png}
 }
-  \caption{Зависимости  $\bar{e}(a_q)$ для системы (\ref{atu:eq:spr_a})
+  \caption{Зависимости  $\overline{e}(a_q)$ для системы (\ref{atu:eq:spr_a})
   при различных видах нестационарности этого параметра
 }
 \label{atu:f:spr_a_e_a_q}
