--- a/fric_testsys.tex
+++ b/fric_testsys.tex
@@ -155,14 +155,14 @@ $q_\gamma$ (рис.~\ref{atu:f:fric_e_qgamma})
   \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-p_qg_e_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-p_qg_e_sin.png}
 }
-  \caption{Зависимости  $\bar{e}(q_\gamma)$ для системы (\ref{atu:eq:dryfric_sys})
+  \caption{Зависимости  $\overline{e}(q_\gamma)$ для системы (\ref{atu:eq:dryfric_sys})
   при различных видах нестационарности этого параметра
 }
 \label{atu:f:fric_e_qgamma}
 \end{figure}
 
 
-Зависимости $\bar{e_*}(a_q)$ (рис.~\ref{atu:f:fric_e_a_q})
+Зависимости $\overline{e_*}(a_q)$ (рис.~\ref{atu:f:fric_e_a_q})
  позволяют корректно определить время усреденения.
 
 \begin{figure}[htb!]
@@ -170,7 +170,7 @@ $q_\gamma$ (рис.~\ref{atu:f:fric_e_qgamma})
   \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-p_a_q_e_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-p_a_q_e_sin.png}
 }
-  \caption{Зависимости  $\bar{e}(a_q)$ для системы (\ref{atu:eq:dryfric_sys})
+  \caption{Зависимости  $\overline{e}(a_q)$ для системы (\ref{atu:eq:dryfric_sys})
   при различных видах нестационарности этого параметра
 }
 \label{atu:f:fric_e_a_q}
