Remove unused from class,
Add chapter, but not works for now.

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -43,12 +43,19 @@
 % ====================================================================================================
 \begin{document}
 
+\begin{center}
+  {\Large Титульная страница}
+  \vfill
+  2016
+\end{center}
+\clearpage
+
 \tableofcontents
 
 
 % ----------------------------------------------------------------------------------------------------
 
-\section*{Введение}
+\chapter*{Введение}
 
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
